feat : 바우처 타입 필드명 수정, 타입의 문자열 getter 추가